# coral

./: .gitignore  get_geotag.py  index.html  maps.yandex.py  pyproject.toml  settings.py
css/: style.css
data/: coordinates.json  offices.txt
js/: data.js  index.js
